@@ -3,5 +3,4 @@ debian/conffiles/*                  etc/boinc-client
 debian/extra/bash/*                 etc/bash_completion.d
 debian/extra/udev-cpu_share         usr/share/boinc-client
 debian/extra/update-boinc-applinks  usr/bin
-debian/overrides/boinc-client       usr/share/lintian/overrides
 debian/tmp/usr/bin/switcher         usr/lib/boinc-client
