@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>
 Uploaders: Steffen Moeller <steffen_moeller@gmx.de>, Frank S. Thomas <fst@debian.org>, Christoph Martin <christoph.martin@uni-mainz.de>
 Standards-Version: 3.8.0
-Build-Depends: debhelper (>= 5), quilt (>= 0.40), po-debconf, dh-buildinfo,
+Build-Depends: debhelper (>= 7), quilt (>= 0.40), po-debconf, dh-buildinfo,
  docbook2x, docbook-xml, autotools-dev, automake1.9 (>= 1.9.3),
  autoconf (>= 2.59), libxml2-utils, zlib1g-dev, libssl-dev,
  libcurl4-openssl-dev (>= 7.17.1), freeglut3-dev, libsm-dev, libice-dev,
