@@ -115,13 +115,16 @@ CFGFLAGS_boinc-client = \
   CXXFLAGS="$(CXXFLAGS_boinc-client)" \
   LDFLAGS="$(LDFLAGS)"
 
-unit-test:
+unit-test-stamp:
+	dh_testdir
 	xmllint --nonet --noout \
 	  debian/conffiles/cc_config.xml \
 	  debian/conffiles/global_prefs_override.xml
+	touch $@
 
-pre-build: unit-test patch pre-build-stamp
+pre-build: unit-test-stamp patch pre-build-stamp
 pre-build-stamp:
+	dh_testdir
 	cp -f /usr/share/misc/config.guess config.guess
 	cp -f /usr/share/misc/config.sub config.sub
 	aclocal-1.9 -I m4 && autoheader && automake-1.9 && autoconf
@@ -129,14 +132,14 @@ pre-build-stamp:
 	docbook2x-man debian/manpages/update-boinc-applinks.xml
 	touch $@
 
-build: pre-build build-stamp
-build-stamp: build-stamp-boinc-client
+build: pre-build build-boinc-client-stamp build-stamp
+build-stamp:
 	dh_testdir
 	./configure $(CFGFLAGS)
 	$(MAKE)
 	touch $@
 
-build-stamp-boinc-client:
+build-boinc-client-stamp:
 	dh_testdir
 	./configure $(CFGFLAGS_boinc-client)
 	$(MAKE)
@@ -145,36 +148,21 @@ build-stamp-boinc-client:
 
 clean: clean-patched unpatch
 clean-patched:
-	dh_testdir
-	dh_testroot
-	rm -f pre-build-stamp
-	rm -f build-stamp
-	rm -f build-stamp-boinc-client
-	
-	dh_clean client/boinc.optimized
-	
-	[ ! -f Makefile ] || $(MAKE) distclean
-	
-	dh_clean update-boinc-applinks.1
-	
+	dh clean --before dh_clean
 	dh_clean \
+	  client/boinc.optimized \
+	  update-boinc-applinks.1 \
 	  `find -name Makefile.in` \
 	  aclocal.m4 \
 	  config.h.in \
 	  configure
-	
+	dh clean --remaining
 	debconf-updatepo
 
-install: install-arch
-install-arch: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-	
+install: build install-stamp
+install-stamp:
+	dh install --after dh_auto_test --before dh_auto_install
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-	
-	dh_install -a
 	
 	# Install files for the boinc-client package.
 	install -D client/boinc.optimized \
@@ -196,33 +184,22 @@ install-arch: build
 	# The en_US po file is actually a po template, thus the corresponding
 	# "BOINC Manager.mo" is empty and useless.
 	rm -rf debian/boinc-manager/usr/share/locale/en_US/
-
-binary-arch: build install-arch
-	dh_testdir -a
-	dh_testroot
-	dh_installchangelogs -a -k checkin_notes
-	dh_installdocs -a
-	dh_installdebconf -a
-	dh_installexamples -a
-	dh_installmenu -a
-	dh_desktop -a
-	dh_installinit -a
-	dh_installman -a
-	dh_installudev -a
-	dh_buildinfo -a
-	dh_link -a
-	dh_strip -a --dbg-package=boinc-dbg
-	dh_compress -a
-	dh_fixperms -a
+	
+	dh install --after dh_auto_install --before dh_installchangelogs
+	dh_installchangelogs -k checkin_notes
+	dh install --after dh_installchangelogs --until dh_fixperms
 	chmod 755 \
 	  debian/boinc-client/usr/share/boinc-client/udev-cpu_share \
 	  debian/boinc-client/usr/share/bug/boinc-client/script \
 	  debian/boinc-manager/usr/share/doc/boinc-manager/examples/run-boincmgr
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
+	dh install
+	dh_buildinfo
+	touch $@
+
+binary-arch: install
+	dh binary-arch --before dh_strip
+	dh_strip -a --dbg-package=boinc-dbg
+	dh binary-arch
 
 binary: binary-arch
 
